--- a/docs/layouts/default.njk
+++ b/docs/layouts/default.njk
@@ -8,6 +8,12 @@
 	<link href="/c4s-all.css" rel="stylesheet">
     </head>
     <body class="sans-serif p3">
+	<a href="/" class="link inherit">
+	    <h1 class="mt0 mb4">
+	       <span class="tracked-tight">C4S</span> docu&shy;menta&shy;tion
+	    </h1>
+	</a>
+
 	{% block content %}{% endblock %}
     </body>
 </html>
