Add center alias for mh-auto and no-underline

--- a/src/c4s-custom.scss
+++ b/src/c4s-custom.scss
@@ -624,6 +624,11 @@ $margins: (
     'properties': [margin-left margin-right],
     'levels': $margin-spacer-levels
   ),
+  // Use alias center for mh-auto
+  '': (
+    'properties': [margin-left margin-right],
+    'levels': ('center': auto)
+  ),
   'mv': (
     'properties': [margin-top margin-bottom],
     'levels': $spacer-levels
@@ -737,6 +742,7 @@ $text-decorations: (
   'underline':    underline,
   'line-through': line-through,
   'strike':       line-through,
+  'no-underline': none,
   'link':         none
 );
 
