--- a/src/c4s-custom.scss
+++ b/src/c4s-custom.scss
@@ -56,7 +56,6 @@ $modules: (
   'transform':              false,
   'transition':             false,
   'visibility':             false,
-  'overflow':               true,
   'box-sizing':             false,
   'cursor':                 false,
   'miscellaneous':          false,
@@ -70,6 +69,8 @@ $modules: (
   'display':                true,
   'flex':                   true,
   'flex-direction':         true,
+  'grid':                   true,
+  'overflow':               true,
   'float':                  true,
   'border-radius':          true,
   'font-size':              true,
@@ -87,6 +88,8 @@ $modules: (
 
 /*
  * Colors
+ *
+ * Used in border-color, background-color, color, hover-background-color and hover-color modules
  */
 $black: #000;
 $white: #fff;
@@ -187,6 +190,8 @@ $colors: (
 
 /*
  * Spacers
+ *
+ * Used in complex, margin and padding modules
  */
 $spacer-base: 2rem;
 $spacer-levels: (
@@ -202,6 +207,8 @@ $spacer-levels: (
 
 /*
  * Sizers
+ *
+ * Used in height and width modules
  */
 $sizer-base: 1rem;
 $sizer-levels: (
@@ -306,13 +313,13 @@ $borders: (
  */
 $border-style-prefix: b--;
 $border-styles: (
-  'solid': solid,
+  'solid':  solid,
   'dotted': dotted,
   'dashed': dashed,
   'double': double,
   'groove': groove,
-  'ridge': ridge,
-  'inset': inset,
+  'ridge':  ridge,
+  'inset':  inset,
   'outset': outset
 );
 
@@ -359,12 +366,12 @@ $coordinate-directions: (
  */
 $cursor-name: cursor;
 $cursors: (
-  'pointer': pointer,
-  'text': text,
-  'none': none,
+  'pointer':     pointer,
+  'text':        text,
+  'none':        none,
   'not-allowed': not-allowed,
-  'progress': progress,
-  'wait': wait
+  'progress':    progress,
+  'wait':        wait
 );
 
 /*
@@ -434,6 +441,7 @@ $flex-wraps: (
   'nowrap':       nowrap,
   'wrap-reverse': wrap-reverse
 );
+
 $flex-align-items-name: items;
 $flex-align-items: (
   'start':    flex-start,
@@ -442,6 +450,7 @@ $flex-align-items: (
   'baseline': baseline,
   'stretch':  stretch
 );
+
 $flex-align-self-name: self;
 $flex-align-selfs: (
   'start':    flex-start,
@@ -450,6 +459,7 @@ $flex-align-selfs: (
   'baseline': baseline,
   'stretch':  stretch
 );
+
 $flex-align-content-name: content;
 $flex-align-contents: (
   'start':   flex-start,
@@ -459,6 +469,7 @@ $flex-align-contents: (
   'around':  space-around,
   'stretch': stretch
 );
+
 $flex-justify-content-name: justify;
 $flex-justify-contents: (
   'start':   flex-start,
@@ -467,16 +478,19 @@ $flex-justify-contents: (
   'between': space-between,
   'around':  space-around
 );
+
 $flex-grow-name: flex-grow;
 $flex-grows: (
   '0': 0,
   '1': 1
 );
+
 $flex-shrink-name: flex-shrink;
 $flex-shrinks: (
   '0': 0,
   '1': 1
 );
+
 $flex-order-name: order;
 $flex-orders: (
   // '1':    1,
@@ -559,6 +573,19 @@ $font-weight-levels: (
   'fw-normal':  400,
   'b':          700 // Bold
 );
+
+/*
+ * Grid
+ */
+$column-name: col;
+$row-name: row;
+$number-of-columns: 12;
+$columns: ('auto': auto);
+
+@for $i from 1 through $number-of-columns {
+  $currentColumn: ('#{$i}': math.div(100%, $number-of-columns) * $i);
+  $columns: map.merge($columns, $currentColumn);
+}
 
 /*
  * Height
@@ -845,6 +872,6 @@ $word-breaks: (
  * Do not manually edit the configure mixin or add any code below the mixin
  */
 /* stylelint-disable max-line-length, at-rule-empty-line-before */
-@include variables.configure($global-prefix: $global-prefix, $breakpoints-all: $breakpoints-all, $breakpoints: $breakpoints, $modules: $modules, $black: $black, $white: $white, $colors: $colors, $spacer-base: $spacer-base, $spacer-levels: $spacer-levels, $sizer-base: $sizer-base, $sizer-levels: $sizer-levels, $background-color-name: $background-color-name, $border-collapses: $border-collapses, $border-color-prefix: $border-color-prefix, $border-radius-prefix: $border-radius-prefix, $border-radius-base: $border-radius-base, $border-radius-levels: $border-radius-levels, $borders: $borders, $border-style-prefix: $border-style-prefix, $border-styles: $border-styles, $border-width-prefix: $border-width-prefix, $border-width-base: $border-width-base, $border-widths: $border-widths, $box-sizings: $box-sizings, $coordinate-spacer-levels: $coordinate-spacer-levels, $coordinate-directions: $coordinate-directions, $cursor-name: $cursor-name, $cursors: $cursors, $debug-grid-name: $debug-grid-name, $debug-grids: $debug-grids, $debug-striped-name: $debug-striped-name, $debug-striped-items: $debug-striped-items, $display-prefix: $display-prefix, $displays: $displays, $flex-direction-name: $flex-direction-name, $flex-directions: $flex-directions, $flex-wrap-name: $flex-wrap-name, $flex-wraps: $flex-wraps, $flex-align-items-name: $flex-align-items-name, $flex-align-items: $flex-align-items, $flex-align-self-name: $flex-align-self-name, $flex-align-selfs: $flex-align-selfs, $flex-align-content-name: $flex-align-content-name, $flex-align-contents: $flex-align-contents, $flex-justify-content-name: $flex-justify-content-name, $flex-justify-contents: $flex-justify-contents, $flex-grow-name: $flex-grow-name, $flex-grows: $flex-grows, $flex-shrink-name: $flex-shrink-name, $flex-shrinks: $flex-shrinks, $flex-order-name: $flex-order-name, $flex-orders: $flex-orders, $float-prefix: $float-prefix, $floats: $floats, $font-families: $font-families, $font-size-base: $font-size-base, $font-scaling-factor: $font-scaling-factor, $font-sizes: $font-sizes, $font-styles: $font-styles, $font-weight-levels: $font-weight-levels, $height-prefix: $height-prefix, $hover-background-color-name: $hover-background-color-name, $hover-color-name: $hover-color-name, $letter-spacings: $letter-spacings, $line-height-name: $line-height-name, $line-height-levels: $line-height-levels, $margin-spacer-levels: $margin-spacer-levels, $margins: $margins, $measures: $measures, $opacity-name: $opacity-name, $opacity-levels: $opacity-levels, $overflow-name: $overflow-name, $overflows: $overflows, $paddings: $paddings, $positions: $positions, $text-aligns: $text-aligns, $text-decorations: $text-decorations, $text-shadows: $text-shadows, $text-transforms: $text-transforms, $transform-translate-horizontal-name: $transform-translate-horizontal-name, $transform-translate-horizontal-levels: $transform-translate-horizontal-levels, $transform-translate-vertical-name: $transform-translate-vertical-name, $transform-translate-vertical-levels: $transform-translate-vertical-levels, $transition-name: $transition-name, $transition-speeds: $transition-speeds, $vertical-align-name: $vertical-align-name, $vertical-aligns: $vertical-aligns, $visibilities: $visibilities, $white-spaces: $white-spaces, $width-prefix: $width-prefix, $word-break-name: $word-break-name, $word-breaks: $word-breaks, );
+@include variables.configure($global-prefix: $global-prefix, $breakpoints-all: $breakpoints-all, $breakpoints: $breakpoints, $modules: $modules, $black: $black, $white: $white, $colors: $colors, $spacer-base: $spacer-base, $spacer-levels: $spacer-levels, $sizer-base: $sizer-base, $sizer-levels: $sizer-levels, $background-color-name: $background-color-name, $border-collapses: $border-collapses, $border-color-prefix: $border-color-prefix, $border-radius-prefix: $border-radius-prefix, $border-radius-base: $border-radius-base, $border-radius-levels: $border-radius-levels, $borders: $borders, $border-style-prefix: $border-style-prefix, $border-styles: $border-styles, $border-width-prefix: $border-width-prefix, $border-width-base: $border-width-base, $border-widths: $border-widths, $box-sizings: $box-sizings, $coordinate-spacer-levels: $coordinate-spacer-levels, $coordinate-directions: $coordinate-directions, $cursor-name: $cursor-name, $cursors: $cursors, $debug-grid-name: $debug-grid-name, $debug-grids: $debug-grids, $debug-striped-name: $debug-striped-name, $debug-striped-items: $debug-striped-items, $display-prefix: $display-prefix, $displays: $displays, $flex-direction-name: $flex-direction-name, $flex-directions: $flex-directions, $flex-wrap-name: $flex-wrap-name, $flex-wraps: $flex-wraps, $flex-align-items-name: $flex-align-items-name, $flex-align-items: $flex-align-items, $flex-align-self-name: $flex-align-self-name, $flex-align-selfs: $flex-align-selfs, $flex-align-content-name: $flex-align-content-name, $flex-align-contents: $flex-align-contents, $flex-justify-content-name: $flex-justify-content-name, $flex-justify-contents: $flex-justify-contents, $flex-grow-name: $flex-grow-name, $flex-grows: $flex-grows, $flex-shrink-name: $flex-shrink-name, $flex-shrinks: $flex-shrinks, $flex-order-name: $flex-order-name, $flex-orders: $flex-orders, $float-prefix: $float-prefix, $floats: $floats, $font-families: $font-families, $font-size-base: $font-size-base, $font-scaling-factor: $font-scaling-factor, $font-sizes: $font-sizes, $font-styles: $font-styles, $font-weight-levels: $font-weight-levels, $column-name: $column-name, $row-name: $row-name, $number-of-columns: $number-of-columns, $columns: $columns, $height-prefix: $height-prefix, $hover-background-color-name: $hover-background-color-name, $hover-color-name: $hover-color-name, $letter-spacings: $letter-spacings, $line-height-name: $line-height-name, $line-height-levels: $line-height-levels, $margin-spacer-levels: $margin-spacer-levels, $margins: $margins, $measures: $measures, $opacity-name: $opacity-name, $opacity-levels: $opacity-levels, $overflow-name: $overflow-name, $overflows: $overflows, $paddings: $paddings, $positions: $positions, $text-aligns: $text-aligns, $text-decorations: $text-decorations, $text-shadows: $text-shadows, $text-transforms: $text-transforms, $transform-translate-horizontal-name: $transform-translate-horizontal-name, $transform-translate-horizontal-levels: $transform-translate-horizontal-levels, $transform-translate-vertical-name: $transform-translate-vertical-name, $transform-translate-vertical-levels: $transform-translate-vertical-levels, $transition-name: $transition-name, $transition-speeds: $transition-speeds, $vertical-align-name: $vertical-align-name, $vertical-aligns: $vertical-aligns, $visibilities: $visibilities, $white-spaces: $white-spaces, $width-prefix: $width-prefix, $word-break-name: $word-break-name, $word-breaks: $word-breaks, );
 /* stylelint-enable max-line-length, at-rule-empty-line-before */
 @include load-modules.load-modules();
