--- a/src/c4s-custom.scss
+++ b/src/c4s-custom.scss
@@ -58,6 +58,7 @@ $modules: (
   'visibility':             false,
   'box-sizing':             false,
   'cursor':                 false,
+  'hover':                  false,
   'miscellaneous':          false,
   'debug':                  false,
   'padding':                true,
@@ -435,7 +436,7 @@ $flex-directions: (
 /*
  * Flex
  */
-$flex-wrap-name: wrap;
+$flex-wrap-name: flex;
 $flex-wraps: (
   'wrap':         wrap,
   'nowrap':       nowrap,
@@ -493,16 +494,16 @@ $flex-shrinks: (
 
 $flex-order-name: order;
 $flex-orders: (
-  // '1':    1,
-  // '2':    2,
-  // '3':    3,
-  // '4':    4,
-  // '5':    5,
-  // '6':    6,
-  // '7':    7,
-  // '8':    8,
-  // '9':    9,
-  // 'last': 99999
+  '1':    1,
+  '2':    2,
+  '3':    3,
+  '4':    4,
+  '5':    5,
+  '6':    6,
+  '7':    7,
+  '8':    8,
+  '9':    9,
+  'last': 99999
 );
 
 /*
@@ -769,8 +770,7 @@ $text-decorations: (
   'underline':    underline,
   'line-through': line-through,
   'strike':       line-through,
-  'no-underline': none,
-  'link':         none
+  'no-underline': none
 );
 
 /*
@@ -806,7 +806,11 @@ $transform-translate-vertical-levels: $-translate-levels;
 /*
  * Transition
  */
-$transition-name: transition-transform;
+$transition-name: transition;
+$transition-properties: (
+  '':          all,
+  'transform': transform
+);
 $transition-speeds: (
   'slow':   .5s,
   'medium': .25s,
@@ -820,13 +824,13 @@ $vertical-align-name: v;
 $vertical-aligns: (
   'mid':         middle,
   'middle':      middle,
-  'base':        baseline,
   'top':         top,
   'bottom':      bottom,
-  'text-top':    text-top,
-  'text-bottom': text-bottom,
-  'sub':         sub,
-  'super':       super
+  // 'base':        baseline,
+  // 'text-top':    text-top,
+  // 'text-bottom': text-bottom,
+  // 'sub':         sub,
+  // 'super':       super
 );
 
 /*
@@ -872,6 +876,6 @@ $word-breaks: (
  * Do not manually edit the configure mixin or add any code below the mixin
  */
 /* stylelint-disable max-line-length, at-rule-empty-line-before */
-@include variables.configure($global-prefix: $global-prefix, $breakpoints-all: $breakpoints-all, $breakpoints: $breakpoints, $modules: $modules, $black: $black, $white: $white, $colors: $colors, $spacer-base: $spacer-base, $spacer-levels: $spacer-levels, $sizer-base: $sizer-base, $sizer-levels: $sizer-levels, $background-color-name: $background-color-name, $border-collapses: $border-collapses, $border-color-prefix: $border-color-prefix, $border-radius-prefix: $border-radius-prefix, $border-radius-base: $border-radius-base, $border-radius-levels: $border-radius-levels, $borders: $borders, $border-style-prefix: $border-style-prefix, $border-styles: $border-styles, $border-width-prefix: $border-width-prefix, $border-width-base: $border-width-base, $border-widths: $border-widths, $box-sizings: $box-sizings, $coordinate-spacer-levels: $coordinate-spacer-levels, $coordinate-directions: $coordinate-directions, $cursor-name: $cursor-name, $cursors: $cursors, $debug-grid-name: $debug-grid-name, $debug-grids: $debug-grids, $debug-striped-name: $debug-striped-name, $debug-striped-items: $debug-striped-items, $display-prefix: $display-prefix, $displays: $displays, $flex-direction-name: $flex-direction-name, $flex-directions: $flex-directions, $flex-wrap-name: $flex-wrap-name, $flex-wraps: $flex-wraps, $flex-align-items-name: $flex-align-items-name, $flex-align-items: $flex-align-items, $flex-align-self-name: $flex-align-self-name, $flex-align-selfs: $flex-align-selfs, $flex-align-content-name: $flex-align-content-name, $flex-align-contents: $flex-align-contents, $flex-justify-content-name: $flex-justify-content-name, $flex-justify-contents: $flex-justify-contents, $flex-grow-name: $flex-grow-name, $flex-grows: $flex-grows, $flex-shrink-name: $flex-shrink-name, $flex-shrinks: $flex-shrinks, $flex-order-name: $flex-order-name, $flex-orders: $flex-orders, $float-prefix: $float-prefix, $floats: $floats, $font-families: $font-families, $font-size-base: $font-size-base, $font-scaling-factor: $font-scaling-factor, $font-sizes: $font-sizes, $font-styles: $font-styles, $font-weight-levels: $font-weight-levels, $column-name: $column-name, $row-name: $row-name, $number-of-columns: $number-of-columns, $columns: $columns, $height-prefix: $height-prefix, $hover-background-color-name: $hover-background-color-name, $hover-color-name: $hover-color-name, $letter-spacings: $letter-spacings, $line-height-name: $line-height-name, $line-height-levels: $line-height-levels, $margin-spacer-levels: $margin-spacer-levels, $margins: $margins, $measures: $measures, $opacity-name: $opacity-name, $opacity-levels: $opacity-levels, $overflow-name: $overflow-name, $overflows: $overflows, $paddings: $paddings, $positions: $positions, $text-aligns: $text-aligns, $text-decorations: $text-decorations, $text-shadows: $text-shadows, $text-transforms: $text-transforms, $transform-translate-horizontal-name: $transform-translate-horizontal-name, $transform-translate-horizontal-levels: $transform-translate-horizontal-levels, $transform-translate-vertical-name: $transform-translate-vertical-name, $transform-translate-vertical-levels: $transform-translate-vertical-levels, $transition-name: $transition-name, $transition-speeds: $transition-speeds, $vertical-align-name: $vertical-align-name, $vertical-aligns: $vertical-aligns, $visibilities: $visibilities, $white-spaces: $white-spaces, $width-prefix: $width-prefix, $word-break-name: $word-break-name, $word-breaks: $word-breaks, );
+@include variables.configure($global-prefix: $global-prefix, $breakpoints-all: $breakpoints-all, $breakpoints: $breakpoints, $modules: $modules, $black: $black, $white: $white, $colors: $colors, $spacer-base: $spacer-base, $spacer-levels: $spacer-levels, $sizer-base: $sizer-base, $sizer-levels: $sizer-levels, $background-color-name: $background-color-name, $border-collapses: $border-collapses, $border-color-prefix: $border-color-prefix, $border-radius-prefix: $border-radius-prefix, $border-radius-base: $border-radius-base, $border-radius-levels: $border-radius-levels, $borders: $borders, $border-style-prefix: $border-style-prefix, $border-styles: $border-styles, $border-width-prefix: $border-width-prefix, $border-width-base: $border-width-base, $border-widths: $border-widths, $box-sizings: $box-sizings, $coordinate-spacer-levels: $coordinate-spacer-levels, $coordinate-directions: $coordinate-directions, $cursor-name: $cursor-name, $cursors: $cursors, $debug-grid-name: $debug-grid-name, $debug-grids: $debug-grids, $debug-striped-name: $debug-striped-name, $debug-striped-items: $debug-striped-items, $display-prefix: $display-prefix, $displays: $displays, $flex-direction-name: $flex-direction-name, $flex-directions: $flex-directions, $flex-wrap-name: $flex-wrap-name, $flex-wraps: $flex-wraps, $flex-align-items-name: $flex-align-items-name, $flex-align-items: $flex-align-items, $flex-align-self-name: $flex-align-self-name, $flex-align-selfs: $flex-align-selfs, $flex-align-content-name: $flex-align-content-name, $flex-align-contents: $flex-align-contents, $flex-justify-content-name: $flex-justify-content-name, $flex-justify-contents: $flex-justify-contents, $flex-grow-name: $flex-grow-name, $flex-grows: $flex-grows, $flex-shrink-name: $flex-shrink-name, $flex-shrinks: $flex-shrinks, $flex-order-name: $flex-order-name, $flex-orders: $flex-orders, $float-prefix: $float-prefix, $floats: $floats, $font-families: $font-families, $font-size-base: $font-size-base, $font-scaling-factor: $font-scaling-factor, $font-sizes: $font-sizes, $font-styles: $font-styles, $font-weight-levels: $font-weight-levels, $column-name: $column-name, $row-name: $row-name, $number-of-columns: $number-of-columns, $columns: $columns, $height-prefix: $height-prefix, $hover-background-color-name: $hover-background-color-name, $hover-color-name: $hover-color-name, $letter-spacings: $letter-spacings, $line-height-name: $line-height-name, $line-height-levels: $line-height-levels, $margin-spacer-levels: $margin-spacer-levels, $margins: $margins, $measures: $measures, $opacity-name: $opacity-name, $opacity-levels: $opacity-levels, $overflow-name: $overflow-name, $overflows: $overflows, $paddings: $paddings, $positions: $positions, $text-aligns: $text-aligns, $text-decorations: $text-decorations, $text-shadows: $text-shadows, $text-transforms: $text-transforms, $transform-translate-horizontal-name: $transform-translate-horizontal-name, $transform-translate-horizontal-levels: $transform-translate-horizontal-levels, $transform-translate-vertical-name: $transform-translate-vertical-name, $transform-translate-vertical-levels: $transform-translate-vertical-levels, $transition-name: $transition-name, $transition-properties: $transition-properties, $transition-speeds: $transition-speeds, $vertical-align-name: $vertical-align-name, $vertical-aligns: $vertical-aligns, $visibilities: $visibilities, $white-spaces: $white-spaces, $width-prefix: $width-prefix, $word-break-name: $word-break-name, $word-breaks: $word-breaks, );
 /* stylelint-enable max-line-length, at-rule-empty-line-before */
 @include load-modules.load-modules();
