--- a/src/modules/_hover-background-color.scss
+++ b/src/modules/_hover-background-color.scss
@@ -16,4 +16,8 @@
       background-color: $value;
     }
   }
+
+  #{functions.construct-class-name($global-prefix, bg-animate, $media)} {
+    transition: background-color .15s ease-in-out;
+  }
 }
